# FluidAI-Assignment

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  agent.py  config.py  documents.py  guardrails.py  json_compat.py  main.py  prompts.py  schemas.py
app/llm/: __init__.py  providers.py
examples/: test_requests.json
tests/: fakes.py  test_agent.py  test_api.py
