[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fluidai-autonomous-document-agent"
version = "1.0.0"
description = "A guarded Gemini agent that plans and generates polished Word documents."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110,<1.0",
    "httpx>=0.27,<1.0",
    "pydantic>=2.7,<3.0",
    "python-docx>=1.1,<2.0",
    "uvicorn[standard]>=0.29,<1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.setuptools.packages.find]
include = ["app*"]
